Changes since Lynx 2.8 release
===============================================================================

2006-11-06 (2.8.6rel.3 from 2.8.7dev.2)
* ensure that the configured values for PERSONAL_EXTENSION_MAP and
  PERSONAL_MAILCAP are absolute pathnames -TD
* modify logic for reading PERSONAL_EXTENSION_MAP and PERSONAL_MAILCAP to
  ensure that they are files that are controlled only by the user.  The
  default values for these allow lynx to read configuration information
  from the user's current directory at lynx's startup (Debian #396949) -TD

2006-10-12 (2.8.6rel.2)
* update version numbers in documentation -TD
* change embedded URL for HTML'ized lynx.cfg to point to example in current
  release -TD

2006-10-10 (2.8.6rel.1)

2006-10-10 (2.8.6pre.6)
* minor formatting fixes to CHANGES and CHANGES2.8 to facilitate scripted
  analysis of contributions -TD
* predefine _XOPEN_SOURCE_EXTENDED on HPUX to make color-style build -TD
* broaden the conditions on which to reload the color-style information to
  cover any (re)initialization of the screen, e.g., when resizing using
  ordinary curses (report by PG) -TD

2006-10-02 (2.8.6pre.5)
* modify cfg2html.pl to use "use vars" rather than "our", to allow it to work
  with perl version 5.5 -TD
* use curses nodelay() function for BeOS to make HTCheckForInterrupt() work
  on that platform -TD
* filter out obsolete URLs from the customizations saved during install of
  lynx.cfg -TD
* add a configure check for zError() to allow using old zlib's -TD
* fix configure --disable-largefile (from ncurses changes) -TD
* applied lynx's changes to updated files from ftp.unicode.org to take
  advantage of less restrictive copyright (report by Klaus Singvogel) -TD
* workaround for PDCurses versus color-style; reload color style information
  in start_curses() since PDCurses discards that information in endwin()
  (report by Lawrence Armstrong) -TD

2006-09-18 (2.8.6pre.4)